# CmakeRayLibTemplate

./: .gitignore  CMakeLists.txt  License  MoveableCube.c  MoveableCube.h  Notes.md  Readme.md  build_android.sh  build_project.sh  gameobject.c  gameobject.h  gui.c  main.c  open_suse.sh  run_and_build.sh  tank.c  tank.h
.github/workflows/: android.yml  web_build.yml
cmake/: ModuleConfig.cmake
src/: BaseGamePlayLoop.cpp  MoveableCube.cpp  MoveableCube.h  MyClass.cpp  MyClass.h  basegameplayloop.h  gameobject.c  gameobject.cpp  gameobject.h  gui.c  gui.h  main.c  main.cpp  shell.html  tank.cpp  tank.h
src/TemplateGame/: TemplateGameLoop.cpp  TemplateGameLoop.h
src/engine/: GamePlayLoop.cpp  GamePlayLoop.h  GamePlayLoop.ixx  MoveableCube.cpp  main.cpp
src/game/: BasicRTSLoop.cpp  BasicRTSLoop.h  tank.cpp  tank.h
src/resources/: .~lock.License.txt#
